--- a/AnalysisStuff/FourierCheck.ipynb
+++ b/AnalysisStuff/FourierCheck.ipynb
@@ -60,6 +60,15 @@
     }
    ],
    "source": [
+    "\"\"\"\n",
+    "This is meant to look for an periodic behavior in the data.\n",
+    "Because of the low data aq rate, the frequencies that we are looking at in the Fourier Analysis are mHz, and are pretty much irrelevenat\n",
+    "This was a good check, but in hindsight, not a big concern and could probably have been ignored\n",
+    "\"\"\"\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
     "path_prefix = 'C:/Users/blake/Documents/VSCode/Python/Greven/RawData/'\n",
     "path_suffix = '.dat'\n",
     "filename = 'Empty_Cal_7_26'\n",
